--- a/53.프롬프트 엔지니어링.ipynb
+++ b/53.프롬프트 엔지니어링.ipynb
@@ -543,8 +543,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ad4a2f4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "예제 1 : \n",
+      "1. 변수 정의 : \n",
+      "   - 닭을 x마리, 소를 y마리라고 정의합니다.\n",
+      "   \n",
+      "2. 방정식 설정 : \n",
+      "   - 닭과 소를 합쳐 20마리이므로, x + y = 20\n",
+      "   - 다리 수가 50개이므로, 2x + 4y = 50\n",
+      "\n",
+      "3. 계산 과정 : \n",
+      "   - 위의 두 방정식을 활용하여 연립방정식을 풀면,\n",
+      "     x = 10, y = 10\n",
+      "     따라서 닭은 10마리, 소는 10마리입니다.\n",
+      "\n",
+      "4. 검토 : \n",
+      "   - 닭과 소의 수를 합쳤을 때 20마리가 되며, 다리 수도 50개가 맞는지 확인해야 합니다.\n",
+      "\n",
+      "5. 최종 답변 : \n",
+      "   - 닭은 10마리, 소는 10마리입니다.\n",
+      "\n",
+      "이제 오류를 검토해보겠습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#few shot prompt 실행\n",
+    "import openai\n",
+    "import os\n",
+    "from utils import few_shot_cot\n",
+    "query = \"닭과 소를 합쳐 20마리, 다리 수 50개일때 닭과 소는 각각 몇마리인가?\"\n",
+    "# query = '''다음 리스트는 \n",
+    "# '''\n",
+    "client = openai.OpenAI(\n",
+    "    api_key=os.getenv(\"GPT_API_KEY\"),\n",
+    ")\n",
+    "result = few_shot_cot(client,query)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "550c2432",
    "metadata": {},
    "outputs": [],
    "source": []
