--- a/[59]250526/59.랭체인메모리.ipynb
+++ b/[59]250526/59.랭체인메모리.ipynb
@@ -244,11 +244,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "290c4412",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16:41:20 httpx INFO   HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "[user_c] 질문: 저는 철수예요, 반갑습니다.\n",
+      "[user_c] 챗봇: 안녕하세요, 철수님! 반갑습니다. 어떻게 도와드릴까요? 궁금한 점이나 이야기하고 싶은 것이 있다면 말씀해 주세요.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = chatbot.invoke({'input':\"저는 철수예요, 반갑습니다\"}, config={'configurable' : {'session_id' : 'user_c'}})\n",
+    "print(f'[user_c] 질문: 저는 철수예요, 반갑습니다.')\n",
+    "print(f'[user_c] 챗봇: {result}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b058959a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16:42:32 httpx INFO   HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'홍길동님이라고 말씀하셨습니다! 혹시 더 궁금한 점이나 다른 질문이 있으신가요? 도움이 필요하시면 언제든지 말씀해 주세요.'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = chatbot.invoke({'input':\"저는 누구라고요?\"}, config={'configurable' : {'session_id' : 'user_a'}})\n",
+    "# user_a인 홍길동과의 과거 기록을 토대로 ' 당신은 홍길동입니다'라고 대답해야함\n",
+    "result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e067a6c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16:43:13 httpx INFO   HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'이순신님이라고 말씀하셨습니다! 이순신은 한국 역사에서 매우 중요한 인물로, 임진왜란 당시의 명장으로 알려져 있습니다. 혹시 이순신 장군에 대해 더 이야기하고 싶으신가요, 아니면 다른 주제에 대해 이야기해 볼까요?'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = chatbot.invoke({'input':\"저는 누구라고요?\"}, config={'configurable' : {'session_id' : 'user_b'}})\n",
+    "result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96139f37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16:43:20 httpx INFO   HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'철수님이라고 하셨습니다! 혹시 더 궁금한 점이나 다른 이야기를 나누고 싶으신가요? 언제든지 말씀해 주세요.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = chatbot.invoke({'input':\"저는 누구라고요?\"}, config={'configurable' : {'session_id' : 'user_c'}})\n",
+    "result\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67354449",
+   "metadata": {},
+   "source": [
+    "요약 메모리 구현(대화내용 자동 요약)\n",
+    "```\n",
+    "긴 대화내용을 모두 프롬프트에 기록하는 것은 비효율적 -> 프롬프트의 길이 제한에 걸릴 가능성이 있음\n",
+    "Conversation Summary Memory\n",
+    "0.3x 버전에서는 직접 요약용 체인을 만들어서 ChatMessageHistory에 적용\n",
+    "```\n",
+    "어떻게 요약?\n",
+    "```\n",
+    "- 일정길이 이상으로 대화가 누적되면, 과거 대화를 요약해서 핵심 내용만 남김,\n",
+    "- 요약 결과를 메모리에 시스템 메시지 등으로 저장 -> 메모리 절약,\n",
+    "- 새로운 사용자 입력시 요약된 맥락 + 최근 몇 메시지만 참고해서 llm 전달\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ff7fcb57",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 요약용 프롬프트 템플릿\n",
+    "summary_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", \"당신은 대화 요약 전문가입니다. 대화의 주요 내용을 간결하게 요약해 주세요\"),\n",
+    "    (\"human\",\"{conversation}\") #전체 대화내용을 하나의 문자열로 전달\n",
+    "])\n",
+    "# LCEL\n",
+    "summary_chain = summary_prompt | llm | StrOutputParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5dcae521",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['user_a', 'user_b', 'user_c'])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "store.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "489d4598",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17:26:54 httpx INFO   HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "17:26:56 httpx INFO   HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "17:26:57 httpx INFO   HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "17:27:00 httpx INFO   HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "17:27:02 httpx INFO   HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "요약전 user_d의 메모리 메세지 개수: 10\n",
+      "Human: 안녕, 오늘 우리 뭐하려고 했지?\n",
+      "AI: 안녕하세요! 오늘 어떤 이야기를 나누고 싶으신가요? 궁금한 점이나 하고 싶은 주제가 있다면 말씀해 주세요. 함께 이야기해보아요!\n",
+      "Human: 아 맞다. 내일 회의자료 준비해야지, 회의는 몇 시지?\n",
+      "AI: 회의 시간이 기억나지 않으신가요? 회의 일정은 보통 이메일이나 캘린더에 기록되어 있을 텐데요. 확인해보시고, 필요한 자료나 내용이 있다면 제가 도와드릴 수 있습니다! 어떤 자료를 준비해야 할지 말씀해 주시면 함께 고민해볼게요.\n",
+      "Human: 그 회의에 누가 참석하는지 기억나니?\n",
+      "AI: 회의 참석자에 대한 정보는 제가 알 수 없지만, 보통 회의 초대 이메일이나 캘린더에 참석자 목록이 포함되어 있을 거예요. 확인해보시면 좋을 것 같습니다. 만약 참석자 목록을 바탕으로 어떤 내용을 준비해야 할지 고민하고 계신다면, 그에 대해 말씀해 주시면 도와드릴 수 있습니다!\n",
+      "Human: 단위 프로젝트 진행 상황도 공유해야 할까?\n",
+      "AI: 네, 단위 프로젝트 진행 상황을 공유하는 것은 좋은 아이디어입니다. 회의에서 프로젝트의 현재 상태, 진행 중인 작업, 문제점 및 향후 계획 등을 공유하면 참석자들이 프로젝트에 대한 이해를 높이고, 필요한 지원이나 피드백을 받을 수 있습니다. \n",
+      "\n",
+      "어떤 내용을 포함할지 고민하고 계신다면, 진행 상황, 주요 성과, 문제점 및 해결 방안 등을 정리해보는 것이 좋습니다. 필요하신 부분이 있다면 더 구체적으로 도와드릴 수 있습니다!\n",
+      "Human: 최근에 이야기 했던 새로운 기능에 대한 업데이트는 있어?\n",
+      "AI: 새로운 기능에 대한 업데이트는 프로젝트의 진행 상황에 따라 다를 수 있습니다. 만약 최근에 논의했던 기능이 있다면, 그 기능의 개발 상태, 테스트 결과, 사용자 피드백 등을 포함하여 업데이트를 준비하는 것이 좋습니다. \n",
+      "\n",
+      "업데이트 내용을 정리할 때는 다음과 같은 항목을 포함할 수 있습니다:\n",
+      "\n",
+      "1. **기능 설명**: 새로운 기능이 무엇인지 간단히 설명합니다.\n",
+      "2. **진행 상황**: 현재 개발이 어느 단계에 있는지, 완료된 부분과 진행 중인 부분을 명확히 합니다.\n",
+      "3. **테스트 결과**: 기능이 테스트되었는지, 어떤 결과가 나왔는지 공유합니다.\n",
+      "4. **향후 계획**: 다음 단계나 추가 작업이 필요한 부분에 대해 언급합니다.\n",
+      "\n",
+      "이런 정보를 바탕으로 회의에서 효과적으로 소통할 수 있을 것입니다. 추가로 필요한 정보나 도움이 필요하시면 말씀해 주세요!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# user_d 세션에 대화내용을 기록 , 긴 대화 생성\n",
+    "long_queries = [\n",
+    "    '안녕, 오늘 우리 뭐하려고 했지?',\n",
+    "    '아 맞다. 내일 회의자료 준비해야지, 회의는 몇 시지?',\n",
+    "    '그 회의에 누가 참석하는지 기억나니?',\n",
+    "    '단위 프로젝트 진행 상황도 공유해야 할까?',\n",
+    "    '최근에 이야기 했던 새로운 기능에 대한 업데이트는 있어?'\n",
+    "]\n",
+    "session_id = 'user_d'\n",
+    "for q in long_queries:\n",
+    "    answer = chatbot.invoke({'input':q}, config={'configurable' : {'session_id' : session_id}})\n",
+    "\n",
+    "print(f'요약전 user_d의 메모리 메세지 개수: {len(store[session_id].messages)}')\n",
+    "print(store[session_id]) #요약하기전 대화 내용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87524e58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 전체대화 내용을 요약하고 마지막 사용자 질문-답변 쌍만 원본 유지\n",
+    "from langchain_core.messages import SystemMessage, HumanMessage, AIMessage\n",
+    "# 요약 대상 대화내용 추출(마지막 QA 쌍 제외한 이전 내용)\n",
+    "message = store[session_id].messages\n",
+    "if len(message) > 2 : #1번 주고받은 대화 이후에 또 했다는 것 -> 마지막을 빼야함\n",
+    "    original_dialog = '\\n'.join[f'{msg.type.upper()} : {msg.content}' for msg in message[:-2]]\n",
+    "else:\n",
+    "    original_dialog = '\\n'.join([f'{msg.type.upper()} : {msg.content}' for msg in message])\n",
+    "\n",
+    "# llm으로 요약 생성\n"
+   ]
   }
  ],
  "metadata": {
