--- a/[59]250526/59.랭체인메모리.ipynb
+++ b/[59]250526/59.랭체인메모리.ipynb
@@ -468,22 +468,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "87524e58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17:49:59 httpx INFO   HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "== 요약 내용 ==\n",
+      "대화 요약: \n",
+      "HUMAN은 내일 회의 자료를 준비해야 한다고 언급하며 회의 시간과 참석자를 확인하려고 한다. AI는 회의 일정과 참석자 목록을 이메일이나 캘린더에서 확인하라고 조언하고, 단위 프로젝트 진행 상황을 공유하는 것이 좋다고 제안한다. AI는 프로젝트의 현재 상태, 문제점 및 향후 계획 등을 포함할 것을 권장하며, 추가적인 도움이 필요하면 도와주겠다고 말한다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 전체대화 내용을 요약하고 마지막 사용자 질문-답변 쌍만 원본 유지\n",
     "from langchain_core.messages import SystemMessage, HumanMessage, AIMessage\n",
     "# 요약 대상 대화내용 추출(마지막 QA 쌍 제외한 이전 내용)\n",
     "message = store[session_id].messages\n",
     "if len(message) > 2 : #1번 주고받은 대화 이후에 또 했다는 것 -> 마지막을 빼야함\n",
-    "    original_dialog = '\\n'.join[f'{msg.type.upper()} : {msg.content}' for msg in message[:-2]]\n",
+    "    original_dialog = '\\n'.join(f'{msg.type.upper()} : {msg.content}' for msg in message[:-2])\n",
     "else:\n",
     "    original_dialog = '\\n'.join([f'{msg.type.upper()} : {msg.content}' for msg in message])\n",
     "\n",
-    "# llm으로 요약 생성\n"
+    "# llm으로 요약 생성\n",
+    "summary_text = summary_chain.invoke({'conversation':original_dialog})\n",
+    "print(\"== 요약 내용 ==\")\n",
+    "print(summary_text)\n",
+    "# 기존 메모리를 요약으로 교체 : 이전내용 요약본 + 최근 QA 유지\n",
+    "new_history = InMemoryChatMessageHistory()\n",
+    "new_history.messages.append(SystemMessage(content=f'요약:{summary_text}'))\n",
+    "#최근 대화의 마지막 QA쌍 복원\n",
+    "if len(message) >= 2:\n",
+    "    last_user_msg = message[-2]\n",
+    "    last_ai_msg = message[-1]\n",
+    "    if isinstance(last_user_msg, HumanMessage):\n",
+    "        new_history.add_user_message(last_user_msg.content)\n",
+    "    else:\n",
+    "        new_history.messages.append(last_user_msg)\n",
+    "    if isinstance(last_ai_msg, AIMessage):\n",
+    "        new_history.add_ai_message(last_ai_msg.content)\n",
+    "    else:\n",
+    "        new_history.messages.append(last_ai_msg)\n",
+    "# 메모리 교체\n",
+    "store[session_id] = new_history"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a3902a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
